--- a/PA1_Eduardo_Pacheco.html
+++ b/PA1_Eduardo_Pacheco.html
@@ -124,16 +124,15 @@ $(document).ready(function () {
 
 
 <pre class="r"><code>knitr::opts_chunk$set(echo = TRUE)</code></pre>
-<div id="instructions" class="section level2">
-<h2>instructions <you can skip this part></h2>
-</div>
-<div id="introduction" class="section level1">
-<h1>Introduction</h1>
+<div id="instructions-you-can-skip-this-part" class="section level1">
+<h1>instructions (you can skip this part)</h1>
+<div id="introduction" class="section level2">
+<h2>Introduction</h2>
 <p>It is now possible to collect a large amount of data about personal movement using activity monitoring devices such as a Fitbit, Nike Fuelband, or Jawbone Up. These type of devices are part of the “quantified self” movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. But these data remain under-utilized both because the raw data are hard to obtain and there is a lack of statistical methods and software for processing and interpreting the data.</p>
 <p>This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.</p>
 </div>
-<div id="data" class="section level1">
-<h1>Data</h1>
+<div id="data" class="section level2">
+<h2>Data</h2>
 <p>The data for this assignment can be downloaded from the course web site:</p>
 <p>*Dataset: Activity monitoring data <a href="https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip">https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip</a></p>
 <p>The variables included in this dataset are:</p>
@@ -141,6 +140,7 @@ $(document).ready(function () {
 <p>*date: The date on which the measurement was taken in YYYY-MM-DD format</p>
 <p>*interval: Identifier for the 5-minute interval in which measurement was taken</p>
 <p>The dataset is stored in a comma-separated-value (CSV) file and there are a total of 17,568 observations in this dataset.</p>
+</div>
 <div id="assignment" class="section level2">
 <h2>Assignment</h2>
 <p>This assignment will be described in multiple parts. You will need to write a report that answers the questions detailed below. Ultimately, you will need to complete the entire assignment in a single R markdown document that can be processed by knitr and be transformed into an HTML file.</p>
@@ -201,9 +201,49 @@ a</code></pre>
 b</code></pre>
 <pre><code>## [1] &quot;7c376cc5447f11537f8740af8e07d6facc3d9645&quot;</code></pre>
 </div>
-<div id="loading-and-preprocessing-the-data-1" class="section level2">
-<h2>Loading and preprocessing the data</h2>
 </div>
+<div id="now-begin-my-exercicse-loading-and-preprocessing-the-data" class="section level1">
+<h1>(Now begin my exercicse :) ) Loading and preprocessing the data</h1>
+<pre class="r"><code>#first we will download the data
+url &lt;- &quot;https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip&quot;
+download.file(url, destfile = &quot;PA1.zip&quot;)
+unzip(&quot;PA1.zip&quot;)
+
+#now we have activity.csv. Lets see the content
+activity &lt;- read.csv(&quot;activity.csv&quot;,sep=&quot;,&quot;)
+head(activity)</code></pre>
+<pre><code>##   steps       date interval
+## 1    NA 2012-10-01        0
+## 2    NA 2012-10-01        5
+## 3    NA 2012-10-01       10
+## 4    NA 2012-10-01       15
+## 5    NA 2012-10-01       20
+## 6    NA 2012-10-01       25</code></pre>
+<pre class="r"><code>tail(activity)</code></pre>
+<pre><code>##       steps       date interval
+## 17563    NA 2012-11-30     2330
+## 17564    NA 2012-11-30     2335
+## 17565    NA 2012-11-30     2340
+## 17566    NA 2012-11-30     2345
+## 17567    NA 2012-11-30     2350
+## 17568    NA 2012-11-30     2355</code></pre>
+<pre class="r"><code>summary(activity)</code></pre>
+<pre><code>##      steps                date          interval     
+##  Min.   :  0.00   2012-10-01:  288   Min.   :   0.0  
+##  1st Qu.:  0.00   2012-10-02:  288   1st Qu.: 588.8  
+##  Median :  0.00   2012-10-03:  288   Median :1177.5  
+##  Mean   : 37.38   2012-10-04:  288   Mean   :1177.5  
+##  3rd Qu.: 12.00   2012-10-05:  288   3rd Qu.:1766.2  
+##  Max.   :806.00   2012-10-06:  288   Max.   :2355.0  
+##  NA's   :2304     (Other)   :15840</code></pre>
+<pre class="r"><code>str(activity)</code></pre>
+<pre><code>## 'data.frame':    17568 obs. of  3 variables:
+##  $ steps   : int  NA NA NA NA NA NA NA NA NA NA ...
+##  $ date    : Factor w/ 61 levels &quot;2012-10-01&quot;,&quot;2012-10-02&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ interval: int  0 5 10 15 20 25 30 35 40 45 ...</code></pre>
+<pre class="r"><code># I prefer to use dataframes so...
+ database &lt;- data.frame()
+ database &lt;- rbind(database, activity)</code></pre>
 <div id="what-is-mean-total-number-of-steps-taken-per-day-1" class="section level2">
 <h2>What is mean total number of steps taken per day?</h2>
 </div>
